Added the "Profiles" section.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             <h3>Universidad Nacional de Colombia</h3>
             <h3>Universidad Manuela Beltrán</h3>
         </section>
+        <section>
+            <h2>Profiles</h2>
+            <h3>Linkedin</h3>
+            <h3>Github</h3>
+        </section>
         <footer>
             <h2>GitHub</h2>
             <p>My github is <a href="https://github.com/andmoreduro">https://github.com/andmoreduro</a></p>
