Added date ranges for each education.
Also separated each profile and education in its own article.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,29 @@
         </header>
         <section>
             <h2>Education</h2>
-            <h3>Institución Educativa Antonio Lenis</h3>
-            <h3>Universidad Nacional de Colombia</h3>
-            <h3>Universidad Manuela Beltrán</h3>
+            <article>
+                <h3>Institución Educativa Antonio Lenis</h3>
+                <p>From 2013 to 2018.</p>
+            </article>
+            <article>
+                <h3>Universidad Nacional de Colombia</h3>
+                <p>From 2019 to 2021.</p>
+            </article>
+            <article>
+                <h3>Universidad Manuela Beltrán</h3>
+                <p>From 2021 to date.</p>
+            </article>
         </section>
         <section>
             <h2>Profiles</h2>
-            <h3>Linkedin</h3>
-            <h3>Github</h3>
+            <article>
+                <h3>Linkedin</h3>
+                <p><a href="www.linkedin.com/in/andrés-moreno-8b0506264">www.linkedin.com/in/andrés-moreno-8b0506264</a></p>
+            </article>
+            <article>
+                <h3>Github</h3>
+                <p><a href="www.github.com/andmoreduro">www.github.com/andmoreduro</a></p>
+            </article>
         </section>
         <footer>
             <h2>GitHub</h2>
