--- a/index.html
+++ b/index.html
@@ -27,19 +27,38 @@
             </article>
         </section>
         <section>
-            <h2>Profiles</h2>
-            <article>
-                <h3>Linkedin</h3>
-                <p><a href="www.linkedin.com/in/andrés-moreno-8b0506264">www.linkedin.com/in/andrés-moreno-8b0506264</a></p>
-            </article>
-            <article>
-                <h3>Github</h3>
-                <p><a href="www.github.com/andmoreduro">www.github.com/andmoreduro</a></p>
-            </article>
+            <h2>Experience</h2>
+        </section>
+        <section>
+            <h2>Skills</h2>
+            <section>
+                <h3>Certificates</h3>
+            </section>
+        </section>
+        <section>
+            <h2>Projects</h2>
+            <section>
+                <h3>Publications</h3>
+            </section>
+            <section>
+                <h3>Awards</h3>
+            </section>
+        </section>
+        <section>
+            <h2>Testimonials</h2>
         </section>
         <footer>
-            <h2>GitHub</h2>
-            <p>My github is <a href="https://github.com/andmoreduro">https://github.com/andmoreduro</a></p>
+            <section>
+                <h2>Contact Information</h2>
+                <article>
+                    <h3>Linkedin</h3>
+                    <p><a href="www.linkedin.com/in/andrés-moreno-8b0506264">www.linkedin.com/in/andrés-moreno-8b0506264</a></p>
+                </article>
+                <article>
+                    <h3>Github</h3>
+                    <p><a href="www.github.com/andmoreduro">www.github.com/andmoreduro</a></p>
+                </article>
+            </section>
         </footer>
     </body>
 </html>
