Added the assets folder and included a photo of me.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
             <h1>Andrés' Portfolio</h1>
             <p>In Colombia, in the city of Sincelejo, in a poor neighboorhood a little boy was born, and his name was Andrés Felipe Moreno Durango.</p>
-            <img src="" alt="Portrait photo of Andrés Felipe Moreno Durango, the author of this website.">
+            <img src="assets/images/me.jpg" alt="Portrait photo of Andrés Felipe Moreno Durango, the author of this website.">
         </header>
         <section>
             <h2>Education</h2>
