Filled every sections with its correct information.

--- a/index.html
+++ b/index.html
@@ -28,24 +28,60 @@
         </section>
         <section>
             <h2>Experience</h2>
+            <article>
+                <h2>None</h2>
+                <p>None</p>
+            </article>
         </section>
         <section>
             <h2>Skills</h2>
             <section>
                 <h3>Certificates</h3>
+                <article>
+                    <h2>Introduction to Cybersecurity</h2>
+                    <p>From Cisco. Issued in May 2024.</p>
+                </article>
+                <article>
+                    <h2>Python Essentials 1</h2>
+                    <p>From Cisco. Issued in May 2024.</p>
+                </article>
+                <article>
+                    <h2>SCRUM Fundamentals Certified (SFC)</h2>
+                    <p>From SCRUMstudy - Accreditation Body for Scrum and Agile. Issued in March 2024.</p>
+                </article>
+                <article>
+                    <h2>NDG Linux Unhatched</h2>
+                    <p>From Network Development Group. Issued in February 2024.</p>
+                </article>
+                <article>
+                    <h2>CCNAv7: Switching, Routing and Wireless Essentials</h2>
+                    <p>From Cisco. Issued in November 2023.</p>
+                </article>
             </section>
         </section>
         <section>
             <h2>Projects</h2>
             <section>
                 <h3>Publications</h3>
+                <article>
+                    <h4>None</h4>
+                    <p>None</p>
+                </article>
             </section>
             <section>
                 <h3>Awards</h3>
+                <article>
+                    <h4>None</h4>
+                    <p>None</p>
+                </article>
             </section>
         </section>
         <section>
             <h2>Testimonials</h2>
+            <article>
+                <h3>None</h3>
+                <p>None</p>
+            </article>
         </section>
         <footer>
             <section>
