Added most skills.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,34 @@
         </section>
         <section>
             <h2>Skills</h2>
+            <article>
+                <h3>Django</h3>
+                <p></p>
+            </article>
+            <article>
+                <h3>FastAPI</h3>
+                <p></p>
+            </article>
+            <article>
+                <h3>React</h3>
+                <p></p>
+            </article>
+            <article>
+                <h3>Relational Databases</h3>
+                <p></p>
+            </article>
+            <article>
+                <h3>MongoDB</h3>
+                <p></p>
+            </article>
+            <article>
+                <h3>Linux</h3>
+                <p></p>
+            </article>
+            <article>
+                <h3>Java</h3>
+                <p></p>
+            </article>
         </section>
         <section>
             <h3>Certificates</h3>
@@ -61,6 +89,10 @@
         </section>
         <section>
             <h2>Projects</h2>
+            <article>
+                <h3>None</h4>
+                <p>None</p>
+            </article>
         </section>
         <section>
             <h2>Publications</h3>
