Updated styling folder structure and organization.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://rsms.me/">
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
         <link rel="shortcut icon" href="assets/images/favicon/favicon.ico">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="css/main.css">
         <title>Andrés' Portfolio</title>
     </head>
     <body>
