Scroll spy now works. Also changed the style for the active section and added a hover effect.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
                     <li><a class="nav-link" href="#awards">Awards</a></li>
                     <li><a class="nav-link" href="#testimonials">Testimonials</a></li>
                     <li><a class="nav-link" href="#contact-information">Contact information</a></li>
-                    <li><a class="nav-link" href="news.html">News</a></li>
-                    <li><a class="nav-link" href="shop.html">Shop</a></li>
                 </ul>
             </nav>
             <main class="content">
@@ -161,18 +159,27 @@
                 <section id="contact-information">
                     <h1>Contact Information</h1>
                     <div class="card-container">
-                        <article class="card">
-                            <h2>Linkedin</h2>
-                            <p><a href="www.linkedin.com/in/andrés-moreno-8b0506264">www.linkedin.com/in/andrés-moreno-8b0506264</a></p>
+                        <article class="card contact-card">
+                            <h2>Email</h2>
+                            <p>safic913@gmail.com</p>
                         </article>
-                        <article class="card">
-                            <h2>Github</h2>
-                            <p><a href="www.github.com/andmoreduro">www.github.com/andmoreduro</a></p>
+                        <article class="card contact-card">
+                            <h2>Phone</h2>
+                            <p>+57 304 587 9324</p>
+                        </article>
+                        <article class="card contact-card">
+                            <h2><img class="icon" src="assets/images/LI-In-Bug.png" alt="LinkedIn"></h2>
+                            <p><a href="https://www.linkedin.com/in/andrés-moreno-8b0506264">My Linkedin</a></p>
+                        </article>
+                        <article class="card contact-card">
+                            <h2><img class="icon" src="assets/images/github-mark-white.svg" alt="GitHub"></h2>
+                            <p><a href="https://www.github.com/andmoreduro">My Github</a></p>
                         </article>
                     </div>
                 </section>
             </main>
         </div>
+        <script src="js/nav-link.js"></script>
         <script src="js/scroll-spy.js"></script>
     </body>
 </html>
