--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li><a class="nav-link active-section" href="#introduction">Introduction</a></li>
                     <li><a class="nav-link" href="#education">Education</a></li>
                     <li><a class="nav-link" href="#experience">Experience</a></li>
-                    <li><a class="nav-link" href="#skills"">Skills</a></li>
+                    <li><a class="nav-link" href="#skills">Skills</a></li>
                     <li><a class="nav-link" href="#certificates">Certificates</a></li>
                     <li><a class="nav-link" href="#projects">Projects</a></li>
                     <li><a class="nav-link" href="#publications">Publications</a></li>
@@ -30,10 +30,10 @@
                     <h1>Introduction</h1>
                     <div class="introduction-content-container">
                         <img class="image-of-me" src="assets/images/me.jpg" alt="Portrait photo of Andrés Felipe Moreno Durango, the author of this website.">
-                        <article>
+                        <div>
                             <p>In Colombia, in the city of Sincelejo, in a poor neighboorhood a little boy was born, and his name was Andrés Felipe Moreno Durango.</p>
                             <p>I am a Software Engineering student with strong teamwork, effective communication and problem solving skills. I stand out for bringing innovative perspectives that positively impact project development. I have doubled my productivity by mastering typing techniques and I have an upper-intermediate level of English, I prefer collaborative and multicultural environments.</p>
-                        </article>
+                        </div>
                     </div>
                 </section>
                 <section id="education">
@@ -124,7 +124,7 @@
                     <h1>Projects</h1>
                     <div class="card-container">
                         <article class="card">
-                            <h2>None</h4>
+                            <h2>None</h2>
                             <p>None</p>
                         </article>
                     </div>
@@ -133,7 +133,7 @@
                     <h1>Publications</h1>
                     <div class="card-container">
                         <article class="card">
-                            <h2>None</h4>
+                            <h2>None</h2>
                             <p>None</p>
                         </article>
                     </div>
@@ -142,7 +142,7 @@
                     <h1>Awards</h1>
                     <div class="card-container">
                         <article class="card">
-                            <h2>None</h4>
+                            <h2>None</h2>
                             <p>None</p>
                         </article>
                     </div>
@@ -151,7 +151,7 @@
                     <h1>Testimonials</h1>
                     <div class="card-container">
                         <article class="card">
-                            <h2>None</h4>
+                            <h2>None</h2>
                             <p>None</p>
                         </article>
                     </div>
