Updated how socials are displayed.

--- a/index.html
+++ b/index.html
@@ -168,12 +168,9 @@
                             <p itemprop="telephone">+57 304 587 9324</p>
                         </article>
                         <article class="card contact-card">
-                            <h2><img class="icon" src="assets/images/LI-In-Bug.png" alt="LinkedIn"></h2>
-                            <p><a href="https://www.linkedin.com/in/andrés-moreno-8b0506264" itemprop="sameAs">My Linkedin</a></p>
-                        </article>
-                        <article class="card contact-card">
-                            <h2><img class="icon" src="assets/images/github-mark-white.svg" alt="GitHub"></h2>
-                            <p><a href="https://www.github.com/andmoreduro" itemprop="sameAs">My Github</a></p>
+                            <h2>Socials</h2>
+                            <p><a href="https://www.github.com/andmoreduro" itemprop="sameAs"><img class="icon" src="assets/images/github-mark-white.svg" alt="GitHub"></a></p>
+                            <p><a href="https://www.linkedin.com/in/andrés-moreno-8b0506264" itemprop="sameAs"><img class="icon" src="assets/images/LI-In-Bug.png" alt="LinkedIn"></a></p>
                         </article>
                     </div>
                 </section>
