Updated how the introduction is displayed.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h1 itemprop="name">Introduction</h1>
                     <div class="introduction-content-container">
                         <img class="image-of-me" src="assets/images/me.jpg" alt="Portrait photo of Andrés Felipe Moreno Durango, the author of this website." itemprop="image">
-                        <div>
+                        <div class="introduction-content">
                             <p>In Colombia, in the city of <span itemprop="birthPlace">Sincelejo</span>, in a poor neighboorhood a little boy was born, and his name was <span itemprop="givenName">Andrés Felipe</span> <span itemprop="familyName">Moreno Durango</span>.</p>
                             <p itemprop="description">I am a Software Engineering student with strong teamwork, effective communication and problem solving skills. I stand out for bringing innovative perspectives that positively impact project development. I have doubled my productivity by mastering typing techniques and I have an upper-intermediate level of English, I prefer collaborative and multicultural environments.</p>
                         </div>
