--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <div itemprop="recognizedBy" itemscope itemtype="https://schema.org/EducationalOrganization">
                                 <h2 itemprop="name">Universidad Nacional de Colombia</h2>
                             </div>
-                            <p itemprop="description" style="font-style: italic;">From 2019 to 2021. Unfinished.</p>
+                            <p itemprop="description">From 2019 to 2021.  <em>Unfinished</em>.</p>
                         </article>
                         <article class="card" itemprop="hasCredential" itemscope itemtype="https://schema.org/EducationalOccupationalCredential">
                             <!-- No dateCreated as it's ongoing -->
@@ -65,7 +65,7 @@
                             <div itemprop="recognizedBy" itemscope itemtype="https://schema.org/EducationalOrganization">
                                 <h2 itemprop="name">Universidad Manuela Beltrán</h2>
                             </div>
-                            <p itemprop="description" style="font-style: italic;">From 2021 to date.</p>
+                            <p itemprop="description">From 2021 to date.</p>
                         </article>
                     </div>
                 </section>
