--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-KZWMBMW7');</script>
         <!-- End Google Tag Manager -->
-        <meta charset="UTF-8">
+        <!-- Google tag (gtag.js) -->
+        <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-0XPV8K6ZRV"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-0XPV8K6ZRV');
+        </script>        <meta charset="UTF-8"> -->
+        <!-- End of Google tag (gtag.js) -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://rsms.me/">
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
