Added store and news pages.

--- a/index.html
+++ b/index.html
@@ -8,22 +8,12 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-KZWMBMW7');</script>
         <!-- End Google Tag Manager -->
-        <!-- Google tag (gtag.js) -->
-        <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-0XPV8K6ZRV"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-
-          gtag('config', 'G-0XPV8K6ZRV');
-        </script>        <meta charset="UTF-8"> -->
-        <!-- End of Google tag (gtag.js) -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://rsms.me/">
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
         <link rel="shortcut icon" href="assets/images/favicon/favicon.ico">
         <link rel="stylesheet" href="css/main.css">
-        <title>Andrés' Portfolio</title>
+        <title>My Portfolio</title>
     </head>
     <body>
         <!-- Google Tag Manager (noscript) -->
@@ -44,6 +34,8 @@
                     <li><a class="nav-link" href="#awards">Awards</a></li>
                     <li><a class="nav-link" href="#testimonials">Testimonials</a></li>
                     <li><a class="nav-link" href="#contact-information">Contact information</a></li>
+                    <li><a class="nav-link" href="store.html">Store</a></li>
+                    <li><a class="nav-link" href="news.html">News</a></li>
                 </ul>
             </nav>
             <main class="content">
